examples/oso/install/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oso-demo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: oso-demo
    spec:
      containers:
      - name: pod-demo
        image: eduardopax/pod-demo:v1
        ports:
        - name: oso-demo-port
          containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: oso-demo-configmap
            items:
              - key: app.values
                path: application.properties
