examples/oso/install/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: oso-demo-route
spec:
  to:
    kind: Service
    name: oso-demo-service
